--- a/front/index.html
+++ b/front/index.html
@@ -8,42 +8,6 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <script type="text/javascript">
-        /*
-        var flg = false;
-        var num = "";
-        document.addEventListener('keypress', keypress_ivent);//何かしらキーが押されたら
-
-        function keypress_ivent(e) {
-            if (!flg) {//flgがfalseならば
-                start_input_num(e.key);//「％」が入力されたらflgをtrueに(読み取り開始)
-            } else {//flgがtrueならば
-                input_num(e.key);//numに学生番号を格納
-            }
-            return false;
-        }
-
-        function input_num(key) {
-            if (num.length < 7) {//入力が7文字未満なら
-                num = num + String(key);//1文字追加
-            } else if (num.length === 7) {//入力が七文字なら
-                num = num + String(key);//ラスト一文字追加
-                let text_color = "#00ff00";
-                let status = "INFO";
-                let log = `<p class="mx-3" style="color:${text_color}">${new Date().toLocaleString({ timeZone: 'Asia/Tokyo' })} [${status}]    :${num} さん入室</p>`;
-                document.getElementById('console').insertAdjacentHTML('beforeend', log);//ログ表示
-                flg = false;//読み取りを終了する
-                num = "";//numをリセットする
-            }
-        }
-
-        function start_input_num(key) {
-            if (key === '%') {
-                flg = true;
-            }
-        }
-        */
-    </script>
 </head>
 
 <body class="bg-dark">
@@ -53,7 +17,61 @@
                 <div class="row bg-light text-dark py-5">
                     <div class="col-md-8 offset-md-2">
                         <h2 class="fs-1 mb-5 text-center fw-bold">入室管理システム</h2>
-                        <div class="bg-dark">
+
+                        <div v-show="create_user_flg">
+                            <div class="border rounded border-success border-2 p-5">
+                                <h2 class="text-center font-weight-bold">ユーザ登録</h2>
+                                <div class="mb-3">
+                                    <div class="mb-3">
+                                        <div class="row">
+                                            <div class="center-block p-5">
+                                                <p>以下に、discordのユーザidを入力してください。</p>
+                                                <input type="text" id="" class="form-control" placeholder="ex:hoge#1111"
+                                                    v-model="discord_id">
+                                                <div class="mt-3">
+                                                    <a href="#"
+                                                        @click.prevent="explain_flg=!explain_flg">discordのユーザidとは</a>
+                                                    <div class="border rounded p-3" v-show="explain_flg">
+                                                        <button type="button" class="btn-close float-end"
+                                                            aria-label="Close" @click="explain_flg=false"></button>
+                                                        <p>discordのプロフィール欄に書かれている、ユーザ名、#、4桁の数字を含む文字列のこと。下の例では、「kotaro#6765」がidとなる。
+                                                        </p>
+                                                        <img src="./images/discord_explain.png">
+                                                    </div>
+                                                </div>
+                                                <div class="mt-3">
+                                                    <p v-bind:class="create_user_msg.color">
+                                                        {{create_user_msg.text}}
+                                                    </p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="d-flex justify-content-around">
+                                    <button class="btn btn-outline-primary btn-lg" @click="searchUser()">ユーザ検索</button>
+                                    <button class="btn btn-outline-danger btn-lg"
+                                        @click="createUserClose()">キャンセル</button>
+                                </div>
+                            </div>
+                            <br>
+                        </div>
+                        <div v-show="conf_user">
+                            <div class="border rounded border-success border-2 p-5">
+                                <h2 class="text-center font-weight-bold">ユーザ名確認</h2>
+                                <p class="h4 text-center p-5">
+                                    あなたは <span class="text-primary">{{user_name}}</span> さんですか？
+                                </p>
+                                <div class="d-flex justify-content-around">
+                                    <button class="btn btn-outline-primary btn-lg" @click="createUser()"> はい </button>
+                                    <button class="btn btn-outline-danger btn-lg"
+                                        @click="conf_user=false;create_user_flg=true;">いいえ</button>
+                                </div>
+                            </div>
+                            <br>
+                        </div>
+
+                        <div id="log" class="bg-dark">
                             <br>
                             <div id="console">
                                 <p class="mx-3" style="color:#00ff00" v-for="num in nums" v-bind:key="num.time">
